openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: devops-bootcamp-springboot
  name: devops-bootcamp-springboot
spec:
  ports:
  - name: business
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app: devops-bootcamp-springboot
  type: ClusterIP
