openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: devops-bootcamp-springboot
  name: devops-bootcamp-springboot
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: devops-bootcamp-springboot
